# serenity

AK/: Array.h  Debug.h.in  JsonArray.h  JsonArraySerializer.h  JsonObject.cpp  JsonObject.h  JsonObjectSerializer.h  JsonParser.cpp  JsonValue.cpp  JsonValue.h  StringBuilder.h
Kernel/API/: KeyCode.h
Meta/: run.py
Meta/CMake/: all_the_debug_macros.cmake
Meta/Lagom/: CMakeLists.txt
Ports/: .port_include.sh  AvailablePorts.md
Ports/libX11/: package.sh
Ports/libX11/patches/: 0001-serenity-os-support.patch  0002-Dzikie-naprawki-dla-nonthreaded.patch  0003-XlibInt-Include-sys-ioctl.h-when-building-with-threa.patch  ReadMe.md
Ports/libXfont2/: package.sh
Ports/libXfont2/patches/: 0001-Separate-strlcat-from-HAVE_STRLCPY.patch  0002-fart.patch  0003-serenityos-support-i-guess.patch  ReadMe.md
Ports/libfontenc/: package.sh
Ports/libfontenc/patches/: 0001-serenityos-shared-libs-support-i-guess.patch  ReadMe.md
Ports/libsha1/: package.sh
Ports/libsha1/patches/: 0001-fix-build.patch  ReadMe.md
Ports/libxau/: package.sh
Ports/libxcb/: package.sh
Ports/libxcb/patches/: 0001-Support-SerenityOS.patch  ReadMe.md
Ports/libxcvt/: package.sh
Ports/libxkbfile/: package.sh
Ports/xcbproto/: package.sh
Ports/xorg-xwindowserver/: package.sh
Ports/xorg-xwindowserver/patches/: 0001-Xext-Add-missing-argument-to-ShapeRectangles-when-bu.patch  0002-pthread-no.patch  0003-Just-enough-XWindowServer-to-be-able-to-run-it.patch  0004-Revert-remove-commented-lines.patch  0005-Comment-all-the-things-that-cause-segfault.patch  ReadMe.md
Ports/xorgproto/: package.sh
Ports/xtrans/: package.sh
Tests/: CMakeLists.txt
Tests/AK/: TestJSON.cpp
Tests/LibHTTP/: CMakeLists.txt  TestHPack.cpp
Tests/LibJS/: test262-runner.cpp
Userland/Applets/ClipboardHistory/: ClipboardHistoryModel.cpp  main.cpp
Userland/Applets/ResourceGraph/: main.cpp
Userland/Applications/BrowserSettings/: BrowserSettingsWidget.cpp
Userland/Applications/Calendar/: AddEventDialog.cpp
Userland/Applications/CalendarSettings/: CalendarSettingsWidget.cpp  CalendarSettingsWidget.h
Userland/Applications/ClockSettings/: TimeZoneSettingsWidget.cpp
Userland/Applications/DisplaySettings/: ThemePreviewWidget.cpp  ThemesSettingsWidget.cpp
Userland/Applications/FileManager/: CMakeLists.txt  DirectoryView.cpp  DirectoryView.h  FileManagerWindow.gml  FileOperationProgressWidget.cpp  FileOperationProgressWidget.gml  FileOperationProgressWidget.h  FileUtils.cpp  WindowWidget.cpp  WindowWidget.gml  WindowWidget.h  main.cpp
Userland/Applications/FileManager/Properties/: ArchiveTab.gml  ArchiveTab.h  AudioTab.gml  AudioTab.h  FontTab.gml  FontTab.h  GeneralTab.gml  GeneralTab.h  ImageTab.gml  ImageTab.h  PDFTab.gml  PDFTab.h  PropertiesWindow.cpp
Userland/Applications/GamesSettings/: ChessSettingsWidget.cpp  ChessSettingsWidget.h
Userland/Applications/HexEditor/: GoToOffsetDialog.cpp  HexEditor.cpp
Userland/Applications/KeyboardSettings/: KeyboardSettingsWidget.cpp
Userland/Applications/NetworkSettings/: NetworkSettingsWidget.cpp
Userland/Applications/PDFViewer/: PDFViewerWidget.cpp
Userland/Applications/Piano/: PlayerWidget.cpp  PlayerWidget.h
Userland/Applications/PixelPaint/: CreateNewImageDialog.cpp  Image.cpp  MainWidget.cpp  PaletteWidget.cpp
Userland/Applications/Run/: RunWindow.cpp  RunWindow.h
Userland/Applications/Settings/: main.cpp
Userland/Applications/SoundPlayer/: PlaylistWidget.cpp
Userland/Applications/Spreadsheet/: ExportDialog.cpp  ExportDialog.h  HelpWindow.cpp  ImportDialog.cpp  ImportDialog.h  Spreadsheet.cpp  SpreadsheetView.cpp
Userland/Applications/SystemMonitor/: MemoryStatsWidget.cpp  NetworkStatisticsWidget.cpp  ProcessFileDescriptorMapWidget.cpp  ProcessMemoryMapWidget.cpp  ProcessModel.cpp  ProcessStateWidget.cpp  main.cpp
Userland/Demos/Mandelbrot/: Mandelbrot.cpp
Userland/DevTools/HackStudio/: Editor.cpp  HackStudioWidget.cpp  HackStudioWidget.h  Locator.cpp
Userland/DevTools/Profiler/: IndividualSampleModel.cpp  Profile.cpp  ProfileModel.cpp  SamplesModel.cpp  SignpostsModel.cpp  SourceModel.cpp
Userland/Utilities/: gron.cpp  lscpu.cpp
(+114 files in other folders)
